--- a/DeepDivePropsState/package.json
+++ b/DeepDivePropsState/package.json
@@ -20,10 +20,12 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "webpack": "4.42.1",
-    "webpack-cli": "3.3.11",
+    "webpack-cli": "3.3.1",
     "webpack-dev-middleware": "3.7.2",
     "webpack-dev-server": "3.10.3",
     "webpack-hot-middleware": "2.25.0",
